# fast-feedback-service

./: .clang-format  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.sh  conftest.py  environment.yml  ffs.yaml  profile.sh  pyproject.toml  runtime-environment.yml  version.cc.in
.github/workflows/: docker-image.yml
baseline/: CMakeLists.txt  README.md  baseline.cpp  baseline.h  bm.cpp  check_no_tbx.cc  common.hpp  h5read.c  local.cpp  local.h  miniapp.c  miniapp.cc  miniapp.h  no_tbx.cc  no_tbx.h  spotfind.h  spotfind_test_utils.h  standalone.cc  standalone.h
baseline/indexer/: CMakeLists.txt  U_parameterisation.h  assign_indices.cc  assign_indices.h  beam_parameterisation.h  candidate_vectors.json  combinations.cc  detector_parameterisation.h  elist.json  fft3d.cc  flood_fill.cc  gradients_calculator.h  index_module.cpp  indexer.cc  non_primitive_basis.cc  peaks_to_rlvs.cc  refine_candidate.cc  refine_crystal.cc  refinement_utils.h  reflection_data.cc  reflection_data.h  reflection_filter.cc  refman_filter.cc  scan_static_predictor.cc  scanstaticpredictor.cc  score_crystals.cc  target.h  xyz_to_rlp.cc
baseline/indexer/tests/: CMakeLists.txt  test_assign_indices.cc  test_baseline_indexer.sh  test_baseline_indexer_c2sum.sh  test_combinations.cc  test_fft3d.cc  test_flood_fill.cc  test_xyz_to_rlp.cc
baseline/integrator/: CMakeLists.txt  README.md  background.cc  extent.cc  integration_calculations.cc  integrator.cc  kabsch.cc  sigma_estimation.cc
baseline/predictor/: CMakeLists.txt  algorithm.cc  index_generators.cc  predict.cc  predict_cli.cc  ray_predictors.cc  scan_static_predictor.cc  stills_predictor.cc  threadpool.cc  utils.cc
baseline/refiner/: B_parameterisation.cc  CMakeLists.txt  U_parameterisation.cc  beam_parameterisation.cc  cell_parameterisation.cc  detector_parameterisation.cc  gradients_calculator.cc  orientation_parameterisation.cc  refinement_utils.cc  target.cc
baseline/refiner/tests/: CMakeLists.txt  test_beam_parameterisation.cc  test_cell_parameterisation.cc  test_detector_parameterisation.cc  test_gradients_calculator.cc  test_orientation_parameterisation.cc
baseline/spotfinder/: CMakeLists.txt  README.md  baseline.cpp  baseline.h  bm.cpp  check_no_tbx.cc  local.h  miniapp.cc  standalone.cc  standalone.h
baseline_indexer/: CMakeLists.txt  assign_indices.h  combinations.cc  fft3d.cc  flood_fill.cc  indexer.cc  peaks_to_rlvs.cc  reflection_data.h  refman_filter.cc  sites_to_vecs.cc  test_baseline_indexer.sh  test_xyz_to_rlp.cc  xyz_to_rlp.cc
baseline_indexer/tests/: CMakeLists.txt  test_fft3d.cc  test_flood_fill.cc  test_peaks_to_rlvs.cc  test_xyz_to_rlp.cc
chart/: Chart.yaml  README.md  values.test.yaml  values.yaml
chart/templates/: deployment.yaml
cmake/Modules/: AlwaysColourCompilation.cmake  ArchiveTarget.cmake  FindBitshuffle.cmake  FindDials.cmake  FindFPGA.cmake  FindLZ4.cmake  Findlodepng.cmake  ResolveGitVersion.cmake  SetDefaultBuildRelWithDebInfo.cmake  UseSpanBackportIfNeeded.cmake
contrib/: filter.sh  install_dls_sw.sh
deployment/: ffs.yaml
docs/: dials_spotfind_equation.tex
dx2/: beam.h  simple_models.cc
dx2_test_models/: beam.h  goniometer.h  scan.h
h5read/: CMakeLists.txt  README.md  h5read.c  miniapp.c  read_h5read.c
h5read/include/: eiger2xe.h  h5read.h
h5read/src/: h5read.c  h5read.cc  h5read_processed.cc  read_chunks.c  read_chunks.cc  read_h5read.c  read_h5read.cc
h5read/tests/: CMakeLists.txt  test_h5read.cc
include/: arg_parser.hpp  common.hpp  cuda_arg_parser.hpp  cuda_common.hpp  device_common.cuh  ffs_logger.hpp  version.hpp
include/integrator/: background.cuh  background.hpp  coordinate_system.hpp  kabsch.hpp  lp_correction.hpp  sigma_estimation.hpp
include/math/: device_precision.cuh  math_utils.cuh  vector3d.cuh
include/predictor/: index_generators.hpp  predict.hpp  ray_predictors.hpp  threadpool.hpp  utils.hpp
indexer/: CMakeLists.txt  assign_indices.h  combinations.cc  fft3d.cc  indexer.cc  reflection_data.h  refman_filter.cc  scanstaticpredictor.cc  simple_models.cc  sites_to_vecs.cc  xyz_to_rlp.cc
integrator/: CMakeLists.txt  background.cu  extent.cc  extent.cu  extent.cuh  extent.hpp  integrator.cc  integrator.cu  integrator.cuh  kabsch.cu  kabsch.cuh
integrator/tests/: CMakeLists.txt  baseline_references.md  test_background.cc  test_extent.cc  test_integrator.cc  test_kabsch.cc
integrator/tests/data/: background_after.h5  indexed.expt  summation_after.h5
predictor/: CMakeLists.txt  predict.cc
scripts/: ssx_index
spotfinder/: CMakeLists.txt  README.md  cbfread.cc  cbfread.hpp  dispersion_algorithm.hpp  mask_utils.cc  mask_utils.hpp  pia.recipe  pipe_handler.hpp  shmread.cc  shmread.hpp  signal_handler.cc  signal_handler.hpp  spotfinder.cc  spotfinder.cu  spotfinder.cuh  spotfinder.h  spotfinder_args.hpp  wait_utils.hpp  watch_visit.py
spotfinder/connected_components/: connected_components.cc  connected_components.hpp
spotfinder/kernels/: dilation.cu  dilation.cuh  erosion.cu  erosion.cuh  erosion.hu  masking.cu  masking.cuh  thresholding.cu  thresholding.cuh
spotfinder/tests/: CMakeLists.txt  test_connected_components.cc
src/ffs/: __init__.py  arg_parser.cc  compare_service.py  cuda_arg_parser.cc  ffs_logger.cc  index.py  service.py  ssx_index.py  ssx_indexer.py  ssx_indexer_nodials.py
src/integrator/: background.cc  coordinate_system.cc  extent.cc  kabsch.cc  lp_correction.cc  sigma_estimation.cc
src/predictor/: predict.cc  ray_predictors.cc  threadpool.cc  utils.cc
tests/: 3d_connected_components.sh  dials_2d_spotfinding_output.txt  dials_32bit_spotfinding_output.txt  dispersion_extended.sh  pipetest.py  pipetest.sh  regular_dispersion.sh  res_comparison.sh  test_baseline_indexer.py  test_baseline_integrator.py  test_gpu_ssx_index.py  test_integrator.py  test_predict.py  test_spotfinder.py
