[tool.poetry]
name = "watch_dc"
version = "0.1.0"
description = ""
authors = ["Nicholas Devenish <ndevenish@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
watchdir = "^1.0.0"
pyepics = "^3.5.2"
zocalo = "^0.30.2"
rich = "^13.7.1"

[tool.poetry.scripts]
watch_dc = 'watch_dc:run'
watch_shm = 'watch_shm:run'
watch_rmq = "watch_rmq:run"

[tool.poetry.plugins."workflows.services"]
"GPUPerImageAnalysis" = "service:GPUPerImageAnalysis"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = ["E501", "E741"]
line-length = 88
lint.select = ["C9", "E", "F", "W", "I"]
lint.unfixable = ["F841"]
