[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ffs"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nicholas Devenish", email = "ndevenish@gmail.com" },
    { name = "Dimitri Vlachos", email = "dimitrios.vlachos@diamond.ac.uk" },
]

requires-python = ">=3.12"
dependencies = [
    "pydantic>2",
    "pyepics>=3.5.7",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "watchdir>=1.0.0",
    "zocalo>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools_scm]

# pytest.ini
[tool.pytest.ini_options]
testpaths = "tests"

[project.entry-points."workflows.services"]
"GPUPerImageAnalysis" = "ffs.service:GPUPerImageAnalysis"
"XRCResultCompare" = "compare_service:XRCResultCompare"

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
"ffs" = ["index*.so"]

[tool.ruff]
lint.ignore = ["E501", "E741"]
lint.select = ["C9", "E", "F", "W", "I"]
lint.unfixable = ["F841"]
line-length = 88
